Fix overflow

--- a/assets/css/layout.vertical.css
+++ b/assets/css/layout.vertical.css
@@ -5,3 +5,6 @@ poi-main {
 hr {
   display: none;
 }
+poi-app {
+  overflow: hidden;
+}
